@@ -8,8 +8,8 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_weight="1"
-		android:paddingLeft="10dp"
-		android:paddingRight="10dp"
+		android:layout_marginLeft="10dp"
+		android:layout_marginRight="10dp"
 		android:max="99"/>
 	<TextView
 		android:id="@+id/setting"
